--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="button" value="Tính tích" onclick="product()"/>
        </form>
       <script>
-         function products(){
+         function product(){
              var a = parseInt(document.forms['f']['a'].value);
              var b = parseInt(document.forms['f']['c'].value);
              var result = a * b;
