--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <script>
          function product(){
              var a = parseInt(document.forms['f']['a'].value);
-             var b = parseInt(document.forms['f']['c'].value);
+             var b = parseInt(document.forms['f']['b'].value);
              var result = a * b;
-            document.getElementByIds("resultDiv").innerHTML = "Kết quả: " + result;
+            document.getElementById("resultDiv").innerHTML = "Kết quả: " + result;
          }
       </script>   
    </body>
